# mlayout

./: .gitignore  HOWTO.txt  LICENSE  README.md  TODO.txt  mlayout.cabal  mlayout.hs  package.yaml  rm.sh  stack.yaml  trifecta.hs  trifecta.txt
app/: MLayout.hs
dhall/: DataFunctorFoldableExtra.hs  DhallExtra.hs  README.txt  Tree.hs  XTree.hs  XTreeTest.dhall  go.sh  id  lambek  mtree.hs  mtree2.hs  recursive.dhall  tree.dhall  tree.hs  xtree.hs
dhall/Function/: flip
dhall/List/: foldl  intersperse
dhall/Mu/: functor  steppable
dhall/NonEmptyList/: last
dhall/Text/: monoid  semigroup
dhall/Tree/: Type  create  destruct  foldable  functor  recite  recursive  steppable  traversable  traverse
dhall/TreeBase/: Type  bifunctor  functor
dhall/TreeTest/: DirEntry  DirInfo  entriesText  formatDirEntry  formatDirInfo.dhall  formatTree.dhall
dhall/XNor/: functor
dhall/XTree/: Type  recite  recursive  steppable
dhall/XTreeF/: Type  functor
examples/: cpio.mlayout  cpio.mlayout.pretty.gold  example.mlayout  example.mlayout.pretty.gold  posix.mlayout  posix.mlayout.pretty.gold
mlayout/: cpio.mlayout  cpio.mlayout.pretty.gold  posix.mlayout
src/MLayout/: Data.hs  DataFunctorFoldableExtra.hs  HFunctor.hs  Parser.hs  Resolver.hs  XTree.hs
templates/: c.dhall  c.ede  c_fields.ede  c_layout.ede  c_values.dhall
test/: Main.hs  Main1.hs  bound.err.mlayout  bound2.err.mlayout  children_width.err.mlayout  example.mlayout  litem00.mlayout.gold  litem00.ok.mlayout  litem01.mlayout  litem01.mlayout.pretty.gold  litem01.ok.mlayout  litem02.mlayout  litem02.mlayout.pretty.gold  litem02.ok.mlayout  litem03.mlayout.pretty.gold  litem03.ok.mlayout  litem04.mlayout  litem04.ok.mlayout  test.mlayout  test.mlayout.gold  test.mlayout.pretty.gold  test.ok.mlayout  trifecta.txt
test/gold/: children_width.mlayout.pretty.gold  example.mlayout.pretty.gold  litem01.mlayout.pretty.gold  litem02.mlayout.pretty.gold  litem03.mlayout.pretty.gold  litem04.mlayout.pretty.gold  litem05.mlayout.pretty.gold  test.mlayout.pretty.gold
test/gold.test/: litem04.p.mlayout
test/gold/mlayout/: cpio.mlayout.pretty.gold  posix.mlayout.pretty.gold
test/test/: bound2.E.mlayout  litem00.mlayout  litem03.mlayout  litem05.mlayout
tests/: Main.hs  bound.E.mlayout.golden  bound2.E.mlayout.golden  children_width.mlayout  example.mlayout  litem00.mlayout.golden
