name:                mlayout
version:             0.1.0.0
synopsis:            Compiler for memory layout descriptions
description:         Please see README.md
homepage:            https://gitlab.com/aleksey.makarov/mlayout#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksey Makarov
maintainer:          aleksey.makarov@gmail.com
copyright:           2018 Aleksey Makarov
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    build-depends:       base >= 3 && < 5
    exposed-modules:     MLayout.Parser
    ghc-options:         -Wall
    build-depends:       base >= 4.9 && < 5
                       , aeson
                       , formatting >= 6.3.6
                       , parsers >= 0.12.9
                       , prettyprinter
                       , text >= 1.2.3.0
                       , trifecta >= 2
                       , unordered-containers
                       , vector
    default-language:    Haskell2010

test-suite mlayout-test
    hs-source-dirs:      test
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    build-depends:       base >= 4.9 && < 5
                       , foldl
                       , tasty >= 1.1.0.3
                       , tasty-golden
                       , tasty-hunit >= 0.10.0.1
                       , text
                       , turtle >= 1.5.10
    ghc-options:         -Wall -threaded
    default-language:    Haskell2010

executable mlayout
    hs-source-dirs:      .
    main-is:             mlayout.hs
    build-depends:       base >= 4.9 && < 5
                       , aeson
                       , aeson-pretty
                       , ansi-wl-pprint
                       , bytestring
                       , ede
                       , mlayout
                       , filepath
                       , foldl
                       , optparse-applicative
                       , prettyprinter
                       , text
                       , time
                       , timerep
                       , trifecta >= 2
                       , turtle >= 1.5.10
                       , unix
    ghc-options:         -Wall -threaded
    default-language:    Haskell2010

source-repository head
    type:                git
    location:            https://gitlab.com/aleksey.makarov/mlayout
